Prevent imgs being stretched

--- a/src/app/pages/about-us/about-us.component.scss
+++ b/src/app/pages/about-us/about-us.component.scss
@@ -20,12 +20,14 @@ h3 {
 
 .about-us-mobile {
   width: 100%;
+  height: auto;
   margin-bottom: -6px;
 }
 
 .about-us {
   display: flex;
   width: 100%;
+  height: auto;
   text-align: center;
 }
 
