--- a/src/app/pages/cars/cars.component.scss
+++ b/src/app/pages/cars/cars.component.scss
@@ -8,6 +8,7 @@
   img {
     width: 100%;
     max-height: 520px;
+    height: auto;
     object-fit: cover
   }
 
