--- a/src/app/pages/sell/sell.component.scss
+++ b/src/app/pages/sell/sell.component.scss
@@ -11,6 +11,7 @@
   img {
     width: 100%;
     max-height: 520px;
+    height: auto;
     object-fit: cover
   }
 
